force-app/main/default/objects/Visit__c/fields/Check_In_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Datetime__c</fullName>
    <label>Check In Datetime</label>
    <type>DateTime</type>
</CustomField>