force-app/main/default/objects/Visit__c/fields/Check_Out_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Datetime__c</fullName>
    <label>Check Out Datetime</label>
    <type>DateTime</type>
</CustomField>