force-app/main/default/objects/Visit__c/fields/Check_Out_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Geolocation__c</fullName>
    <label>Check Out Geolocation</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>