force-app/main/default/objects/Visit__c/fields/Is_Checked_In_and_Out__c.field-meta.xml
<CustomField>
    <fullName>Is_Checked_In_and_Out__c</fullName>
    <formula>NOT(ISBLANK(Check_Out_Datetime__c  )) &amp;&amp; NOT(ISBLANK( Check_In_Datetime__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Checked In and Out</label>
    <type>Checkbox</type>
</CustomField>