force-app/main/default/objects/Visit__c/fields/Practitioner_Name__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Name__c</fullName>
    <label>Practitioner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>