force-app/main/default/objects/Visit__c/fields/Sales_Reps_to_Visit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Reps_to_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Reps to Visit</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>