force-app/main/default/objects/Visit__c/fields/Type_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Visit__c</fullName>
    <label>Type of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OP</fullName>
            </value>
            <value>
                <fullName>IP</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>