force-app/main/default/objects/Visit__c/fields/Visit_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Visit_Feedback__c</fullName>
    <label>Visit Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>