force-app/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient_Case__c</columns>
    <columns>Sales_Reps_to_Visit__c</columns>
    <columns>Planned_Start_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>